Styled the image editor, created the image 100% popup, created the functions to resize the image mask The image editor expand the element automatically on image 100% or in first image. Improved editor for small images. Improved image element for small images. Fixed image editor initialization when the image size change on 'no-stretch' mode. Updated controls to allow the tooltip layout. Updated image editor for the gallery element. Removed the caption layout control and added to the settings.
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/themes/upfront@12674 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/elements/upfront-gallery/css/ugallery.css
+++ b/elements/upfront-gallery/css/ugallery.css
@@ -444,6 +444,7 @@ div.ugallery-controls i.upfront-icon:before {
 	background-image: url(../../../img/uf-core-el-sprite.svg);
 }
 
+.upfront-field-icon-over:before,
 .upfront-icon-region-over:before {
 	background-position: -699px -486px;
 }
@@ -455,6 +456,10 @@ div.ugallery-controls i.upfront-icon:before {
 }
 .upfront-icon-region-over-active:hover:before {
 	background-position: -807px -486px;
+}
+
+.upfront-field-icon-below:before {
+	background-position: -699px -646px;
 }
 
 .upfront-icon-region-fullscreen:before {
@@ -714,4 +719,12 @@ input#ugallery-addlabels:focus {
 }
 
 
-
+.ugallery-settings .upfront-settings-item{
+	padding-bottom: 0;
+}
+.ugallery-settings .upfront-field-wrap-radios .upfront-field-multiple-horizontal-inline {
+	margin-right: 15px;
+}
+.ugallery-settings .upfront-field-wrap-radios .upfront-field-multiple-horizontal-inline:last-child {
+	margin-right: 0;
+}
